Compiler/gov/nasa/ksc/ddsjs/parser/DdsJsIdlParser.java
// Generated from DdsJsIdl.g4 by ANTLR 4.5.1
package gov.nasa.ksc.ddsjs.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DdsJsIdlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, OPEN_BRACE=3, ASSIGN_OP=4, CLOSE_BRACE=5, STAT_END=6, 
		OPEN_ANGLE=7, CLOSE_ANGLE=8, OPEN_SQUARE=9, CLOSE_SQUARE=10, COMMA_SEP=11, 
		SCOPE_OP=12, COLON_SEP=13, INCLUDE_CD=14, MODULE_KW=15, TYPEDEF_KW=16, 
		CONST_KW=17, ENUM_KW=18, OCTET_KW=19, UNSIGNED_KW=20, SHORT_KW=21, LONG_KW=22, 
		FLOAT_KW=23, DOUBLE_KW=24, STRING_KW=25, SEQUENCE_KW=26, STRUCT_KW=27, 
		VALUETYPE_KW=28, UNION_KW=29, SWITCH_KW=30, CASE_KW=31, BOOLEAN_KW=32, 
		IDENTIFIER=33, DECIMAL_VALUE=34, HEXADECIMAL_VALUE=35, OCTAL_VALUE=36, 
		BINARY_VALUE=37, FLOAT_VALUE=38, STRING_VALUE=39, BOOLEAN_VALUE=40, INCLUDE_FILESPEC=41, 
		SL_COMMENT=42, ML_COMMENT=43, WS=44;
	public static final int
		RULE_translationUnit = 0, RULE_unitContents = 1, RULE_module = 2, RULE_moduleMember = 3, 
		RULE_compilerDirective = 4, RULE_typeAlias = 5, RULE_typeDescription = 6, 
		RULE_scopedName = 7, RULE_constantDefinition = 8, RULE_constantValue = 9, 
		RULE_enumDefinition = 10, RULE_enumLiteral = 11, RULE_topicDefinition = 12, 
		RULE_dataStructureDefinition = 13, RULE_valuetypeDefinition = 14, RULE_memberDefinition = 15, 
		RULE_unionDefinition = 16, RULE_unionCaseDefinition = 17, RULE_sequenceTypeDescription = 18, 
		RULE_stringTypeDescription = 19, RULE_sizeDefinition = 20, RULE_primitiveTypeDescription = 21, 
		RULE_intTypeDescription = 22, RULE_floatTypeDescription = 23, RULE_booleanTypeDescription = 24, 
		RULE_integerValue = 25;
	public static final String[] ruleNames = {
		"translationUnit", "unitContents", "module", "moduleMember", "compilerDirective", 
		"typeAlias", "typeDescription", "scopedName", "constantDefinition", "constantValue", 
		"enumDefinition", "enumLiteral", "topicDefinition", "dataStructureDefinition", 
		"valuetypeDefinition", "memberDefinition", "unionDefinition", "unionCaseDefinition", 
		"sequenceTypeDescription", "stringTypeDescription", "sizeDefinition", 
		"primitiveTypeDescription", "intTypeDescription", "floatTypeDescription", 
		"booleanTypeDescription", "integerValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'{'", "'='", "'}'", "';'", "'<'", "'>'", "'['", "']'", 
		"','", "'::'", "':'", "'#include'", "'module'", "'typedef'", "'const'", 
		"'enum'", "'octet'", "'unsigned'", "'short'", "'long'", "'float'", "'double'", 
		"'string'", "'sequence'", "'struct'", "'valuetype'", "'union'", "'switch'", 
		"'case'", "'boolean'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "OPEN_BRACE", "ASSIGN_OP", "CLOSE_BRACE", "STAT_END", 
		"OPEN_ANGLE", "CLOSE_ANGLE", "OPEN_SQUARE", "CLOSE_SQUARE", "COMMA_SEP", 
		"SCOPE_OP", "COLON_SEP", "INCLUDE_CD", "MODULE_KW", "TYPEDEF_KW", "CONST_KW", 
		"ENUM_KW", "OCTET_KW", "UNSIGNED_KW", "SHORT_KW", "LONG_KW", "FLOAT_KW", 
		"DOUBLE_KW", "STRING_KW", "SEQUENCE_KW", "STRUCT_KW", "VALUETYPE_KW", 
		"UNION_KW", "SWITCH_KW", "CASE_KW", "BOOLEAN_KW", "IDENTIFIER", "DECIMAL_VALUE", 
		"HEXADECIMAL_VALUE", "OCTAL_VALUE", "BINARY_VALUE", "FLOAT_VALUE", "STRING_VALUE", 
		"BOOLEAN_VALUE", "INCLUDE_FILESPEC", "SL_COMMENT", "ML_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DdsJsIdl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DdsJsIdlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TranslationUnitContext extends ParserRuleContext {
		public List<UnitContentsContext> unitContents() {
			return getRuleContexts(UnitContentsContext.class);
		}
		public UnitContentsContext unitContents(int i) {
			return getRuleContext(UnitContentsContext.class,i);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterTranslationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitTranslationUnit(this);
		}
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(52);
				unitContents();
				}
				}
				setState(55); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INCLUDE_CD || _la==MODULE_KW );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitContentsContext extends ParserRuleContext {
		public CompilerDirectiveContext compilerDirective() {
			return getRuleContext(CompilerDirectiveContext.class,0);
		}
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public UnitContentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitContents; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterUnitContents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitUnitContents(this);
		}
	}

	public final UnitContentsContext unitContents() throws RecognitionException {
		UnitContentsContext _localctx = new UnitContentsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_unitContents);
		try {
			setState(59);
			switch (_input.LA(1)) {
			case INCLUDE_CD:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				compilerDirective();
				}
				break;
			case MODULE_KW:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				module();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode MODULE_KW() { return getToken(DdsJsIdlParser.MODULE_KW, 0); }
		public TerminalNode IDENTIFIER() { return getToken(DdsJsIdlParser.IDENTIFIER, 0); }
		public List<ModuleMemberContext> moduleMember() {
			return getRuleContexts(ModuleMemberContext.class);
		}
		public ModuleMemberContext moduleMember(int i) {
			return getRuleContext(ModuleMemberContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(MODULE_KW);
			setState(62);
			match(IDENTIFIER);
			setState(63);
			match(OPEN_BRACE);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MODULE_KW) | (1L << TYPEDEF_KW) | (1L << CONST_KW) | (1L << ENUM_KW) | (1L << STRUCT_KW) | (1L << VALUETYPE_KW) | (1L << UNION_KW))) != 0)) {
				{
				{
				setState(64);
				moduleMember();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			match(CLOSE_BRACE);
			setState(72);
			_la = _input.LA(1);
			if (_la==STAT_END) {
				{
				setState(71);
				match(STAT_END);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleMemberContext extends ParserRuleContext {
		public TopicDefinitionContext topicDefinition() {
			return getRuleContext(TopicDefinitionContext.class,0);
		}
		public TypeAliasContext typeAlias() {
			return getRuleContext(TypeAliasContext.class,0);
		}
		public ConstantDefinitionContext constantDefinition() {
			return getRuleContext(ConstantDefinitionContext.class,0);
		}
		public EnumDefinitionContext enumDefinition() {
			return getRuleContext(EnumDefinitionContext.class,0);
		}
		public UnionDefinitionContext unionDefinition() {
			return getRuleContext(UnionDefinitionContext.class,0);
		}
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public ModuleMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleMember; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterModuleMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitModuleMember(this);
		}
	}

	public final ModuleMemberContext moduleMember() throws RecognitionException {
		ModuleMemberContext _localctx = new ModuleMemberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_moduleMember);
		try {
			setState(80);
			switch (_input.LA(1)) {
			case STRUCT_KW:
			case VALUETYPE_KW:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				topicDefinition();
				}
				break;
			case TYPEDEF_KW:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				typeAlias();
				}
				break;
			case CONST_KW:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				constantDefinition();
				}
				break;
			case ENUM_KW:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				enumDefinition();
				}
				break;
			case UNION_KW:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				unionDefinition();
				}
				break;
			case MODULE_KW:
				enterOuterAlt(_localctx, 6);
				{
				setState(79);
				module();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompilerDirectiveContext extends ParserRuleContext {
		public CompilerDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilerDirective; }
	 
		public CompilerDirectiveContext() { }
		public void copyFrom(CompilerDirectiveContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IncludeCompilerDirectiveContext extends CompilerDirectiveContext {
		public TerminalNode INCLUDE_FILESPEC() { return getToken(DdsJsIdlParser.INCLUDE_FILESPEC, 0); }
		public IncludeCompilerDirectiveContext(CompilerDirectiveContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterIncludeCompilerDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitIncludeCompilerDirective(this);
		}
	}

	public final CompilerDirectiveContext compilerDirective() throws RecognitionException {
		CompilerDirectiveContext _localctx = new CompilerDirectiveContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_compilerDirective);
		try {
			_localctx = new IncludeCompilerDirectiveContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(INCLUDE_CD);
			setState(83);
			match(INCLUDE_FILESPEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeAliasContext extends ParserRuleContext {
		public TypeAliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeAlias; }
	 
		public TypeAliasContext() { }
		public void copyFrom(TypeAliasContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayTypedefContext extends TypeAliasContext {
		public TerminalNode TYPEDEF_KW() { return getToken(DdsJsIdlParser.TYPEDEF_KW, 0); }
		public TypeDescriptionContext typeDescription() {
			return getRuleContext(TypeDescriptionContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(DdsJsIdlParser.IDENTIFIER, 0); }
		public TerminalNode DECIMAL_VALUE() { return getToken(DdsJsIdlParser.DECIMAL_VALUE, 0); }
		public ArrayTypedefContext(TypeAliasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterArrayTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitArrayTypedef(this);
		}
	}
	public static class NonArrayTypedefContext extends TypeAliasContext {
		public TerminalNode TYPEDEF_KW() { return getToken(DdsJsIdlParser.TYPEDEF_KW, 0); }
		public TypeDescriptionContext typeDescription() {
			return getRuleContext(TypeDescriptionContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(DdsJsIdlParser.IDENTIFIER, 0); }
		public NonArrayTypedefContext(TypeAliasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterNonArrayTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitNonArrayTypedef(this);
		}
	}

	public final TypeAliasContext typeAlias() throws RecognitionException {
		TypeAliasContext _localctx = new TypeAliasContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeAlias);
		try {
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new NonArrayTypedefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(TYPEDEF_KW);
				setState(86);
				typeDescription();
				setState(87);
				match(IDENTIFIER);
				setState(88);
				match(STAT_END);
				}
				break;
			case 2:
				_localctx = new ArrayTypedefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(TYPEDEF_KW);
				setState(91);
				typeDescription();
				setState(92);
				match(IDENTIFIER);
				setState(93);
				match(OPEN_SQUARE);
				setState(94);
				match(DECIMAL_VALUE);
				setState(95);
				match(CLOSE_SQUARE);
				setState(96);
				match(STAT_END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDescriptionContext extends ParserRuleContext {
		public TypeDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDescription; }
	 
		public TypeDescriptionContext() { }
		public void copyFrom(TypeDescriptionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CustomTypeDescriptionContext extends TypeDescriptionContext {
		public ScopedNameContext scopedName() {
			return getRuleContext(ScopedNameContext.class,0);
		}
		public CustomTypeDescriptionContext(TypeDescriptionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterCustomTypeDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitCustomTypeDescription(this);
		}
	}
	public static class PrimitiveTypedefContext extends TypeDescriptionContext {
		public PrimitiveTypeDescriptionContext primitiveTypeDescription() {
			return getRuleContext(PrimitiveTypeDescriptionContext.class,0);
		}
		public PrimitiveTypedefContext(TypeDescriptionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterPrimitiveTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitPrimitiveTypedef(this);
		}
	}
	public static class SequenceTypedefContext extends TypeDescriptionContext {
		public SequenceTypeDescriptionContext sequenceTypeDescription() {
			return getRuleContext(SequenceTypeDescriptionContext.class,0);
		}
		public SequenceTypedefContext(TypeDescriptionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterSequenceTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitSequenceTypedef(this);
		}
	}
	public static class StringTypedefContext extends TypeDescriptionContext {
		public StringTypeDescriptionContext stringTypeDescription() {
			return getRuleContext(StringTypeDescriptionContext.class,0);
		}
		public StringTypedefContext(TypeDescriptionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterStringTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitStringTypedef(this);
		}
	}

	public final TypeDescriptionContext typeDescription() throws RecognitionException {
		TypeDescriptionContext _localctx = new TypeDescriptionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typeDescription);
		try {
			setState(104);
			switch (_input.LA(1)) {
			case SEQUENCE_KW:
				_localctx = new SequenceTypedefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				sequenceTypeDescription();
				}
				break;
			case STRING_KW:
				_localctx = new StringTypedefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				stringTypeDescription();
				}
				break;
			case OCTET_KW:
			case UNSIGNED_KW:
			case SHORT_KW:
			case LONG_KW:
			case FLOAT_KW:
			case DOUBLE_KW:
			case BOOLEAN_KW:
				_localctx = new PrimitiveTypedefContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				primitiveTypeDescription();
				}
				break;
			case SCOPE_OP:
			case IDENTIFIER:
				_localctx = new CustomTypeDescriptionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				scopedName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopedNameContext extends ParserRuleContext {
		public ScopedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scopedName; }
	 
		public ScopedNameContext() { }
		public void copyFrom(ScopedNameContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RelativeScopedNameContext extends ScopedNameContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(DdsJsIdlParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(DdsJsIdlParser.IDENTIFIER, i);
		}
		public RelativeScopedNameContext(ScopedNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterRelativeScopedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitRelativeScopedName(this);
		}
	}
	public static class AbsoluteScopedNameContext extends ScopedNameContext {
		public TerminalNode IDENTIFIER() { return getToken(DdsJsIdlParser.IDENTIFIER, 0); }
		public ScopedNameContext scopedName() {
			return getRuleContext(ScopedNameContext.class,0);
		}
		public AbsoluteScopedNameContext(ScopedNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterAbsoluteScopedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitAbsoluteScopedName(this);
		}
	}

	public final ScopedNameContext scopedName() throws RecognitionException {
		ScopedNameContext _localctx = new ScopedNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_scopedName);
		int _la;
		try {
			setState(118);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				_localctx = new RelativeScopedNameContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(IDENTIFIER);
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SCOPE_OP) {
					{
					{
					setState(107);
					match(SCOPE_OP);
					setState(108);
					match(IDENTIFIER);
					}
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case SCOPE_OP:
				_localctx = new AbsoluteScopedNameContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(SCOPE_OP);
				setState(115);
				match(IDENTIFIER);
				setState(116);
				match(SCOPE_OP);
				setState(117);
				scopedName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionContext extends ParserRuleContext {
		public TerminalNode CONST_KW() { return getToken(DdsJsIdlParser.CONST_KW, 0); }
		public TypeDescriptionContext typeDescription() {
			return getRuleContext(TypeDescriptionContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(DdsJsIdlParser.IDENTIFIER, 0); }
		public ConstantValueContext constantValue() {
			return getRuleContext(ConstantValueContext.class,0);
		}
		public ConstantDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).enterConstantDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdsJsIdlListener ) ((DdsJsIdlListener)listener).exitConstantDefinition(this);
		}
	}
